--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,5 +10,5 @@ jobs:
             - uses: actions/checkout@v2
             - uses: gautamkrishnar/blog-post-workflow@master
               with: 
-                max_post_count: "4"
-                feed_list: "https://medium.com/feed/@narmidm"
+                max_post_count: "5"
+                feed_list: "https://medium.com/feed/@narmidm,https://dev.to/feed/narmidm"
